addition of slides and pdf, along with organizing notebooks and data

--- a/notebooks/top3picks.ipynb
+++ b/notebooks/top3picks.ipynb
@@ -17,12 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../american_soccer_analysis_mls_xpass_players_2020-08-02.csv')"
+    "df = pd.read_csv('../american_soccer_analysis_mls_xpass_players_2020-08-02.csv')  #reading in salary data from american soccer analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "max                                             0.238100         "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,108 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Player</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>MinutesIncludes stoppage time.</th>\n",
-       "      <th>Passes</th>\n",
-       "      <th>Pass %Pass Completion</th>\n",
-       "      <th>xPass %Expected pass completion percentage.</th>\n",
-       "      <th>ScoreNumber of passes completed over/under expected.</th>\n",
-       "      <th>Per100Passes completed over/under expected, measured per 100 passes.</th>\n",
-       "      <th>DistanceAverage distance of completed passes, measured in yards. Assumes 115x80 field dimensions.</th>\n",
-       "      <th>VerticalAverage vertical distance of completed passes, measured in yards. Assumes 115x80 field dimensions.</th>\n",
-       "      <th>Touch %Players' share of their team's number of touches.</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Robin Jansson</td>\n",
-       "      <td>ORL</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>686</td>\n",
-       "      <td>159</td>\n",
-       "      <td>0.8742</td>\n",
-       "      <td>0.8417</td>\n",
-       "      <td>5.1771</td>\n",
-       "      <td>3.2561</td>\n",
-       "      <td>24.0257</td>\n",
-       "      <td>10.3384</td>\n",
-       "      <td>0.1531</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Player Team  Season  MinutesIncludes stoppage time.  Passes  \\\n",
-       "13  Robin Jansson  ORL    2020                             686     159   \n",
-       "\n",
-       "    Pass %Pass Completion  xPass %Expected pass completion percentage.  \\\n",
-       "13                 0.8742                                       0.8417   \n",
-       "\n",
-       "    ScoreNumber of passes completed over/under expected.  \\\n",
-       "13                                             5.1771      \n",
-       "\n",
-       "    Per100Passes completed over/under expected, measured per 100 passes.  \\\n",
-       "13                                             3.2561                      \n",
-       "\n",
-       "    DistanceAverage distance of completed passes, measured in yards. Assumes 115x80 field dimensions.  \\\n",
-       "13                                            24.0257                                                   \n",
-       "\n",
-       "    VerticalAverage vertical distance of completed passes, measured in yards. Assumes 115x80 field dimensions.  \\\n",
-       "13                                            10.3384                                                            \n",
-       "\n",
-       "    Touch %Players' share of their team's number of touches.  \n",
-       "13                                             0.1531         "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['Player'] == 'Robin Jansson']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11bc328d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1154a5810>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -408,8 +316,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Player List from salaries notebook\n",
+    "\n",
+    "1. Jack Elliot\n",
+    "2. Aboubacar Keita\n",
+    "3. Jonathon Mensah\n",
+    "4. Josh Williams\n",
+    "5. Nick Lima\n",
+    "6. Gabriel Somi\n",
+    "7. Erik Godoy\n",
+    "8. Ike Opara\n",
+    "9. Kai Wagner\n",
+    "10. Harold Cummings\n",
+    "11. Michael Boxall\n",
+    "12. Justen Glad\n",
+    "13. Doneil Henry\n",
+    "14. Julio Cascante\n",
+    "15. Miles Robinson\n",
+    "16. Alex De John\n",
+    "17. Brent Kallman\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_lst = ['Jack Elliott', 'Aboubacar Keita', 'Josh Williams', 'Nick Lima', 'Erik Godoy', \n",
+    "              'Ike Opara', 'Kai Wagner', 'Harold Cummings', 'Michael Boxall', 'Justen Glad', 'Doneil Henry', 'Julio Cascante', \n",
+    "              'Miles Robinson', 'Alex De John', 'Brent Kallman']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -449,6 +394,96 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Aboubacar Keita</td>\n",
+       "      <td>CLB</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>380</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.8854</td>\n",
+       "      <td>0.8464</td>\n",
+       "      <td>3.7454</td>\n",
+       "      <td>3.9015</td>\n",
+       "      <td>22.1172</td>\n",
+       "      <td>9.3533</td>\n",
+       "      <td>0.1546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Kai Wagner</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>502</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.7538</td>\n",
+       "      <td>0.7010</td>\n",
+       "      <td>3.4348</td>\n",
+       "      <td>5.2844</td>\n",
+       "      <td>24.6417</td>\n",
+       "      <td>9.9307</td>\n",
+       "      <td>0.1221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Ike Opara</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>196</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.8788</td>\n",
+       "      <td>0.7827</td>\n",
+       "      <td>3.1693</td>\n",
+       "      <td>9.6040</td>\n",
+       "      <td>24.8859</td>\n",
+       "      <td>7.2624</td>\n",
+       "      <td>0.1469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>Michael Boxall</td>\n",
+       "      <td>MIN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>696</td>\n",
+       "      <td>89</td>\n",
+       "      <td>0.8652</td>\n",
+       "      <td>0.8445</td>\n",
+       "      <td>1.8373</td>\n",
+       "      <td>2.0644</td>\n",
+       "      <td>19.7043</td>\n",
+       "      <td>5.5872</td>\n",
+       "      <td>0.1226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Miles Robinson</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>316</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0.9158</td>\n",
+       "      <td>0.8976</td>\n",
+       "      <td>1.7252</td>\n",
+       "      <td>1.8160</td>\n",
+       "      <td>22.7193</td>\n",
+       "      <td>4.1497</td>\n",
+       "      <td>0.1754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>Justen Glad</td>\n",
+       "      <td>RSL</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>448</td>\n",
+       "      <td>112</td>\n",
+       "      <td>0.8304</td>\n",
+       "      <td>0.8261</td>\n",
+       "      <td>0.4727</td>\n",
+       "      <td>0.4221</td>\n",
+       "      <td>25.9586</td>\n",
+       "      <td>8.1496</td>\n",
+       "      <td>0.1539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>275</th>\n",
        "      <td>Jack Elliott</td>\n",
        "      <td>PHI</td>\n",
@@ -460,70 +495,172 @@
        "      <td>-0.0402</td>\n",
        "      <td>-0.0508</td>\n",
        "      <td>30.1051</td>\n",
-       "      <td>17.282</td>\n",
+       "      <td>17.2820</td>\n",
        "      <td>0.0942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>423</th>\n",
+       "      <td>Josh Williams</td>\n",
+       "      <td>CLB</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>105</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.6538</td>\n",
+       "      <td>0.7033</td>\n",
+       "      <td>-1.2849</td>\n",
+       "      <td>-4.9420</td>\n",
+       "      <td>29.6957</td>\n",
+       "      <td>18.1435</td>\n",
+       "      <td>0.1872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507</th>\n",
+       "      <td>Nick Lima</td>\n",
+       "      <td>SJE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>568</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0.7778</td>\n",
+       "      <td>0.8354</td>\n",
+       "      <td>-3.6320</td>\n",
+       "      <td>-5.7651</td>\n",
+       "      <td>19.5550</td>\n",
+       "      <td>3.4299</td>\n",
+       "      <td>0.0660</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Player Team  Season  MinutesIncludes stoppage time.  Passes  \\\n",
-       "275  Jack Elliott  PHI    2020                             421      79   \n",
+       "              Player Team  Season  MinutesIncludes stoppage time.  Passes  \\\n",
+       "24   Aboubacar Keita  CLB    2020                             380      96   \n",
+       "27        Kai Wagner  PHI    2020                             502      65   \n",
+       "30         Ike Opara  MIN    2020                             196      33   \n",
+       "65    Michael Boxall  MIN    2020                             696      89   \n",
+       "73    Miles Robinson  ATL    2020                             316      95   \n",
+       "152      Justen Glad  RSL    2020                             448     112   \n",
+       "275     Jack Elliott  PHI    2020                             421      79   \n",
+       "423    Josh Williams  CLB    2020                             105      26   \n",
+       "507        Nick Lima  SJE    2020                             568      63   \n",
        "\n",
        "     Pass %Pass Completion  xPass %Expected pass completion percentage.  \\\n",
+       "24                  0.8854                                       0.8464   \n",
+       "27                  0.7538                                       0.7010   \n",
+       "30                  0.8788                                       0.7827   \n",
+       "65                  0.8652                                       0.8445   \n",
+       "73                  0.9158                                       0.8976   \n",
+       "152                 0.8304                                       0.8261   \n",
        "275                 0.7342                                       0.7347   \n",
+       "423                 0.6538                                       0.7033   \n",
+       "507                 0.7778                                       0.8354   \n",
        "\n",
        "     ScoreNumber of passes completed over/under expected.  \\\n",
+       "24                                              3.7454      \n",
+       "27                                              3.4348      \n",
+       "30                                              3.1693      \n",
+       "65                                              1.8373      \n",
+       "73                                              1.7252      \n",
+       "152                                             0.4727      \n",
        "275                                            -0.0402      \n",
+       "423                                            -1.2849      \n",
+       "507                                            -3.6320      \n",
        "\n",
        "     Per100Passes completed over/under expected, measured per 100 passes.  \\\n",
+       "24                                              3.9015                      \n",
+       "27                                              5.2844                      \n",
+       "30                                              9.6040                      \n",
+       "65                                              2.0644                      \n",
+       "73                                              1.8160                      \n",
+       "152                                             0.4221                      \n",
        "275                                            -0.0508                      \n",
+       "423                                            -4.9420                      \n",
+       "507                                            -5.7651                      \n",
        "\n",
        "     DistanceAverage distance of completed passes, measured in yards. Assumes 115x80 field dimensions.  \\\n",
+       "24                                             22.1172                                                   \n",
+       "27                                             24.6417                                                   \n",
+       "30                                             24.8859                                                   \n",
+       "65                                             19.7043                                                   \n",
+       "73                                             22.7193                                                   \n",
+       "152                                            25.9586                                                   \n",
        "275                                            30.1051                                                   \n",
+       "423                                            29.6957                                                   \n",
+       "507                                            19.5550                                                   \n",
        "\n",
        "     VerticalAverage vertical distance of completed passes, measured in yards. Assumes 115x80 field dimensions.  \\\n",
-       "275                                             17.282                                                            \n",
+       "24                                              9.3533                                                            \n",
+       "27                                              9.9307                                                            \n",
+       "30                                              7.2624                                                            \n",
+       "65                                              5.5872                                                            \n",
+       "73                                              4.1497                                                            \n",
+       "152                                             8.1496                                                            \n",
+       "275                                            17.2820                                                            \n",
+       "423                                            18.1435                                                            \n",
+       "507                                             3.4299                                                            \n",
        "\n",
        "     Touch %Players' share of their team's number of touches.  \n",
-       "275                                             0.0942         "
+       "24                                              0.1546         \n",
+       "27                                              0.1221         \n",
+       "30                                              0.1469         \n",
+       "65                                              0.1226         \n",
+       "73                                              0.1754         \n",
+       "152                                             0.1539         \n",
+       "275                                             0.0942         \n",
+       "423                                             0.1872         \n",
+       "507                                             0.0660         "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Player'] == 'Jack Elliott']"
+    "df[df['Player'].isin(player_lst)]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Player List\n",
+    "## 1. Brent Kallman\n",
     "\n",
-    "1. Jack Elliot\n",
-    "2. Aboubacar Keita\n",
-    "3. Jonathon Mensah\n",
-    "4. Josh Williams\n",
-    "5. Nick Lima\n",
-    "6. Gabriel Somi\n",
-    "7. Erik Godoy\n",
-    "8. Ike Opara\n",
-    "9. Kai Wagner\n",
-    "10. Harold Cummings\n",
-    "11. Michael Boxall\n",
-    "12. Justen Glad\n",
-    "13. Doneil Henry\n",
-    "14. Julio Cascante\n",
-    "15. Miles Robinson\n",
-    "16. Alex De John\n",
-    "17. Brent Kallman\n",
-    "\n"
+    "* From Nebraska\n",
+    "* 6'2\" 190 29 years old\n",
+    "* Currently plays for Minnesota\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Ike Opara\n",
+    "\n",
+    "* From North Carolina\n",
+    "* 6'2\" 180, 31 years old\n",
+    "* Currently plays for Minnesota\n",
+    "* 2019 names to MLS Best XI\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Josh Williams\n",
+    "\n",
+    "* From Ohio\n",
+    "* 6'1\" 160 23 years old\n",
+    "* Plays for Columbus Crew\n",
+    "* Lots of veteran experience\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
